--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^2.5.3
   http: ^1.5.0
   flutter_svg: ^2.2.1
+  dio: ^5.4.0
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
