--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_svg: ^2.2.1
   dio: ^5.4.0
   flutter_spinkit: ^5.2.0
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
