--- a/ios/Flutter/Release.xcconfig
+++ b/ios/Flutter/Release.xcconfig
@@ -1,2 +1,7 @@
+
 #include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.release.xcconfig"
 #include "Generated.xcconfig"
+#include? "Config.xcconfig"
+
+
+GOOGLE_MAPS_API_KEY=AIzaSyD6MS4bUOjkP0fYUklsVzIKYmGmb_MheGQ
