--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
   cupertino_icons: ^1.0.8
   google_fonts: ^6.3.2
   flutter_riverpod: ^3.0.0
@@ -42,6 +43,11 @@ dependencies:
   dio: ^5.4.0
   flutter_spinkit: ^5.2.0
   flutter_dotenv: ^6.0.0
+  flutter_polyline_points: ^3.1.0
+  google_maps_flutter: ^2.7.1
+  geocoding: ^3.0.0
+  location: ^7.0.0
+  geolocator: ^13.0.2
 
 dev_dependencies:
   flutter_test:
@@ -69,6 +75,7 @@ flutter:
   assets:
      - assets/img/
      - assets/svg/
+     - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
