--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   geocoding: ^3.0.0
   location: ^7.0.0
   geolocator: ^13.0.2
+  carousel_slider: ^5.1.1
 
 dev_dependencies:
   flutter_test:
