--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   location: ^7.0.0
   geolocator: ^13.0.2
   carousel_slider: ^5.1.1
+  skeletonizer: ^2.1.0+1
 
 dev_dependencies:
   flutter_test:
