--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   geolocator: ^13.0.2
   carousel_slider: ^5.1.1
   skeletonizer: ^2.1.0+1
+  url_launcher: ^6.3.2
+  webview_flutter: ^4.13.0
 
 dev_dependencies:
   flutter_test:
