--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   skeletonizer: ^2.1.0+1
   url_launcher: ^6.3.2
   webview_flutter: ^4.13.0
+  device_info_plus: ^12.1.0
 
 dev_dependencies:
   flutter_test:
