--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/img/logo.png"  # your logo
+  remove_alpha_ios: true
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
