--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   device_info_plus: ^12.1.0
   cached_network_image: ^3.4.1
   flutter_launcher_icons: ^0.14.4
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.4
