--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   cached_network_image: ^3.4.1
   flutter_launcher_icons: ^0.14.4
   share_plus: ^12.0.1
+  video_player: ^2.10.1
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.4
@@ -91,6 +92,7 @@ flutter:
   assets:
      - assets/img/
      - assets/svg/
+     - assets/vid/
      - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
