--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   share_plus: ^12.0.1
   video_player: ^2.10.1
+  google_sign_in: ^7.2.0
 
 dev_dependencies:
   flutter_launcher_icons: ^0.14.4
